--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.17.0",
         "mongoose": "^8.16.2",
+        "multer": "^2.0.2",
+        "sharp": "^0.34.3",
         "socket.io": "^4.8.1"
     },
     "devDependencies": {
