--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT=5000
 URL=mongodb+srv://jaiatithya:peace@reviron.6xpxc5r.mongodb.net/?retryWrites=true&w=majority&appName=Reviron
 JWT_SECRET=PA00lb6vAR3YrHN23sdjnJEHUIQKPy3Fbb7b+DvlRS8=
+BASE_URL="http://localhost:5000"
