--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,7 @@ PORT=5000
 URL=mongodb+srv://jaiatithya:peace@reviron.6xpxc5r.mongodb.net/?retryWrites=true&w=majority&appName=Reviron
 JWT_SECRET=PA00lb6vAR3YrHN23sdjnJEHUIQKPy3Fbb7b+DvlRS8=
 BASE_URL="http://localhost:5000"
+
+CASHFREE_CLIENT_ID=1040649e41aa41bbf68257619039460401
+CASHFREE_CLIENT_SECRET=cfsk_ma_prod_ddf29160cf7b3b810e8deb2782c0d41f_6f099ace
+CASHFREE_BASE_URL=https://sandbox.cashfree.com/pg
